JFSQL-parser/src/main/java/com/github/jfsql/parser/generated/JFSQLParser.java
// Generated from C:/Users/destr/IdeaProjects/JFSQL/JFSQL-parser/src/main/antlr4/com/github/jfsql/parser\JFSQL.g4 by ANTLR 4.12.0
package com.github.jfsql.parser.generated;

import java.util.List;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JFSQLParser extends Parser {

    static {
        RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
        new PredictionContextCache();
    public static final int
        T__0 = 1, COL = 2, SCOL = 3, DOT = 4, OPEN_PAR = 5, CLOSE_PAR = 6, LT = 7, LT_EQ = 8,
        GT = 9, GT_EQ = 10, EQ = 11, NOT_EQ = 12, QUESTION_MARK = 13, NOT = 14, NULL = 15, IF = 16,
        EXISTS = 17, LIKE = 18, LIMIT = 19, OFFSET = 20, AND = 21, OR = 22, ADD = 23, ALTER = 24,
        CREATE = 25, COLUMN = 26, DELETE = 27, DATABASE = 28, DROP = 29, FROM = 30, INSERT = 31,
        INTO = 32, SELECT = 33, SET = 34, TABLE = 35, UPDATE = 36, VALUES = 37, WHERE = 38,
        RENAME = 39, TO = 40, ON = 41, LEFT = 42, JOIN = 43, INNER = 44, OUTER = 45, INTEGER = 46,
        REAL = 47, TEXT = 48, BLOB = 49, IDENTIFIER = 50, NUMERIC_LITERAL = 51, STRING_LITERAL = 52,
        SPACES = 53;
    public static final int
        RULE_root = 0, RULE_statement = 1, RULE_alterTable = 2, RULE_renameTable = 3,
        RULE_renameColumn = 4, RULE_addColumn = 5, RULE_dropColumn = 6, RULE_createTable = 7,
        RULE_delete = 8, RULE_dropTable = 9, RULE_insert = 10, RULE_select = 11,
        RULE_limit = 12, RULE_offset = 13, RULE_numericValue = 14, RULE_joinOperation = 15,
        RULE_innerJoin = 16, RULE_leftJoin = 17, RULE_update = 18, RULE_columnDefinition = 19,
        RULE_notNull = 20, RULE_ifExists = 21, RULE_ifNotExists = 22, RULE_columnType = 23,
        RULE_expr = 24, RULE_binaryOperator = 25, RULE_symbol = 26, RULE_value = 27,
        RULE_valuesInParentheses = 28, RULE_tableName = 29, RULE_tableDotColumnName = 30,
        RULE_columnName = 31;

    private static String[] makeRuleNames() {
        return new String[]{
            "root", "statement", "alterTable", "renameTable", "renameColumn", "addColumn",
            "dropColumn", "createTable", "delete", "dropTable", "insert", "select",
            "limit", "offset", "numericValue", "joinOperation", "innerJoin", "leftJoin",
            "update", "columnDefinition", "notNull", "ifExists", "ifNotExists", "columnType",
            "expr", "binaryOperator", "symbol", "value", "valuesInParentheses", "tableName",
            "tableDotColumnName", "columnName"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
            null, "'default'", "','", "';'", "'.'", "'('", "')'", "'<'", "'<='",
            "'>'", "'>='", "'='", "'!='", "'?'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
            null, null, "COL", "SCOL", "DOT", "OPEN_PAR", "CLOSE_PAR", "LT", "LT_EQ",
            "GT", "GT_EQ", "EQ", "NOT_EQ", "QUESTION_MARK", "NOT", "NULL", "IF",
            "EXISTS", "LIKE", "LIMIT", "OFFSET", "AND", "OR", "ADD", "ALTER", "CREATE",
            "COLUMN", "DELETE", "DATABASE", "DROP", "FROM", "INSERT", "INTO", "SELECT",
            "SET", "TABLE", "UPDATE", "VALUES", "WHERE", "RENAME", "TO", "ON", "LEFT",
            "JOIN", "INNER", "OUTER", "INTEGER", "REAL", "TEXT", "BLOB", "IDENTIFIER",
            "NUMERIC_LITERAL", "STRING_LITERAL", "SPACES"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "JFSQL.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public JFSQLParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RootContext extends ParserRuleContext {

        public StatementContext statement() {
            return getRuleContext(StatementContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(JFSQLParser.EOF, 0);
        }

        public TerminalNode SCOL() {
            return getToken(JFSQLParser.SCOL, 0);
        }

        public RootContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_root;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).enterRoot(this);
					}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).exitRoot(this);
					}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
					if (visitor instanceof JFSQLVisitor) {
						return ((JFSQLVisitor<? extends T>) visitor).visitRoot(this);
					} else {
						return visitor.visitChildren(this);
					}
        }
    }

    public final RootContext root() throws RecognitionException {
        RootContext _localctx = new RootContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_root);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(64);
                statement();
                setState(66);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == SCOL) {
                    {
                        setState(65);
                        match(SCOL);
                    }
                }

                setState(68);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StatementContext extends ParserRuleContext {

        public AlterTableContext alterTable() {
            return getRuleContext(AlterTableContext.class, 0);
        }

        public CreateTableContext createTable() {
            return getRuleContext(CreateTableContext.class, 0);
        }

        public DeleteContext delete() {
            return getRuleContext(DeleteContext.class, 0);
        }

        public DropTableContext dropTable() {
            return getRuleContext(DropTableContext.class, 0);
        }

        public InsertContext insert() {
            return getRuleContext(InsertContext.class, 0);
        }

        public SelectContext select() {
            return getRuleContext(SelectContext.class, 0);
        }

        public UpdateContext update() {
            return getRuleContext(UpdateContext.class, 0);
        }

        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).enterStatement(this);
					}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).exitStatement(this);
					}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
					if (visitor instanceof JFSQLVisitor) {
						return ((JFSQLVisitor<? extends T>) visitor).visitStatement(this);
					} else {
						return visitor.visitChildren(this);
					}
        }
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_statement);
        try {
            setState(77);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case ALTER:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(70);
                    alterTable();
                }
                break;
                case CREATE:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(71);
                    createTable();
                }
                break;
                case DELETE:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(72);
                    delete();
                }
                break;
                case DROP:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(73);
                    dropTable();
                }
                break;
                case INSERT:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(74);
                    insert();
                }
                break;
                case SELECT:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(75);
                    select();
                }
                break;
                case UPDATE:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(76);
                    update();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AlterTableContext extends ParserRuleContext {

        public TerminalNode ALTER() {
            return getToken(JFSQLParser.ALTER, 0);
        }

        public TerminalNode TABLE() {
            return getToken(JFSQLParser.TABLE, 0);
        }

        public TableNameContext tableName() {
            return getRuleContext(TableNameContext.class, 0);
        }

        public RenameTableContext renameTable() {
            return getRuleContext(RenameTableContext.class, 0);
        }

        public RenameColumnContext renameColumn() {
            return getRuleContext(RenameColumnContext.class, 0);
        }

        public AddColumnContext addColumn() {
            return getRuleContext(AddColumnContext.class, 0);
        }

        public DropColumnContext dropColumn() {
            return getRuleContext(DropColumnContext.class, 0);
        }

        public AlterTableContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_alterTable;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).enterAlterTable(this);
					}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).exitAlterTable(this);
					}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
					if (visitor instanceof JFSQLVisitor) {
						return ((JFSQLVisitor<? extends T>) visitor).visitAlterTable(this);
					} else {
						return visitor.visitChildren(this);
					}
        }
    }

    public final AlterTableContext alterTable() throws RecognitionException {
        AlterTableContext _localctx = new AlterTableContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_alterTable);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(79);
                match(ALTER);
                setState(80);
                match(TABLE);
                setState(81);
                tableName();
                setState(86);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                    case 1: {
                        setState(82);
                        renameTable();
                    }
                    break;
                    case 2: {
                        setState(83);
                        renameColumn();
                    }
                    break;
                    case 3: {
                        setState(84);
                        addColumn();
                    }
                    break;
                    case 4: {
                        setState(85);
                        dropColumn();
                    }
                    break;
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RenameTableContext extends ParserRuleContext {

        public TerminalNode RENAME() {
            return getToken(JFSQLParser.RENAME, 0);
        }

        public TerminalNode TO() {
            return getToken(JFSQLParser.TO, 0);
        }

        public TableNameContext tableName() {
            return getRuleContext(TableNameContext.class, 0);
        }

        public RenameTableContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_renameTable;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).enterRenameTable(this);
					}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).exitRenameTable(this);
					}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
					if (visitor instanceof JFSQLVisitor) {
						return ((JFSQLVisitor<? extends T>) visitor).visitRenameTable(this);
					} else {
						return visitor.visitChildren(this);
					}
        }
    }

    public final RenameTableContext renameTable() throws RecognitionException {
        RenameTableContext _localctx = new RenameTableContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_renameTable);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(88);
                match(RENAME);
                setState(89);
                match(TO);
                setState(90);
                tableName();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RenameColumnContext extends ParserRuleContext {

        public TerminalNode RENAME() {
            return getToken(JFSQLParser.RENAME, 0);
        }

        public TerminalNode COLUMN() {
            return getToken(JFSQLParser.COLUMN, 0);
        }

        public List<ColumnNameContext> columnName() {
            return getRuleContexts(ColumnNameContext.class);
        }

        public ColumnNameContext columnName(int i) {
            return getRuleContext(ColumnNameContext.class, i);
        }

        public TerminalNode TO() {
            return getToken(JFSQLParser.TO, 0);
        }

        public RenameColumnContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_renameColumn;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).enterRenameColumn(this);
					}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).exitRenameColumn(this);
					}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
					if (visitor instanceof JFSQLVisitor) {
						return ((JFSQLVisitor<? extends T>) visitor).visitRenameColumn(this);
					} else {
						return visitor.visitChildren(this);
					}
        }
    }

    public final RenameColumnContext renameColumn() throws RecognitionException {
        RenameColumnContext _localctx = new RenameColumnContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_renameColumn);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(92);
                match(RENAME);
                setState(93);
                match(COLUMN);
                setState(94);
                columnName();
                setState(95);
                match(TO);
                setState(96);
                columnName();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AddColumnContext extends ParserRuleContext {

        public TerminalNode ADD() {
            return getToken(JFSQLParser.ADD, 0);
        }

        public TerminalNode COLUMN() {
            return getToken(JFSQLParser.COLUMN, 0);
        }

        public ColumnDefinitionContext columnDefinition() {
            return getRuleContext(ColumnDefinitionContext.class, 0);
        }

        public AddColumnContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_addColumn;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).enterAddColumn(this);
					}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).exitAddColumn(this);
					}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
					if (visitor instanceof JFSQLVisitor) {
						return ((JFSQLVisitor<? extends T>) visitor).visitAddColumn(this);
					} else {
						return visitor.visitChildren(this);
					}
        }
    }

    public final AddColumnContext addColumn() throws RecognitionException {
        AddColumnContext _localctx = new AddColumnContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_addColumn);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(98);
                match(ADD);
                setState(99);
                match(COLUMN);
                setState(100);
                columnDefinition();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DropColumnContext extends ParserRuleContext {

        public TerminalNode DROP() {
            return getToken(JFSQLParser.DROP, 0);
        }

        public TerminalNode COLUMN() {
            return getToken(JFSQLParser.COLUMN, 0);
        }

        public ColumnNameContext columnName() {
            return getRuleContext(ColumnNameContext.class, 0);
        }

        public DropColumnContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dropColumn;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).enterDropColumn(this);
					}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).exitDropColumn(this);
					}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
					if (visitor instanceof JFSQLVisitor) {
						return ((JFSQLVisitor<? extends T>) visitor).visitDropColumn(this);
					} else {
						return visitor.visitChildren(this);
					}
        }
    }

    public final DropColumnContext dropColumn() throws RecognitionException {
        DropColumnContext _localctx = new DropColumnContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_dropColumn);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(102);
                match(DROP);
                setState(103);
                match(COLUMN);
                setState(104);
                columnName();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CreateTableContext extends ParserRuleContext {

        public TerminalNode CREATE() {
            return getToken(JFSQLParser.CREATE, 0);
        }

        public TerminalNode TABLE() {
            return getToken(JFSQLParser.TABLE, 0);
        }

        public TableNameContext tableName() {
            return getRuleContext(TableNameContext.class, 0);
        }

        public TerminalNode OPEN_PAR() {
            return getToken(JFSQLParser.OPEN_PAR, 0);
        }

        public List<ColumnDefinitionContext> columnDefinition() {
            return getRuleContexts(ColumnDefinitionContext.class);
        }

        public ColumnDefinitionContext columnDefinition(int i) {
            return getRuleContext(ColumnDefinitionContext.class, i);
        }

        public TerminalNode CLOSE_PAR() {
            return getToken(JFSQLParser.CLOSE_PAR, 0);
        }

        public IfNotExistsContext ifNotExists() {
            return getRuleContext(IfNotExistsContext.class, 0);
        }

        public List<TerminalNode> COL() {
            return getTokens(JFSQLParser.COL);
        }

        public TerminalNode COL(int i) {
            return getToken(JFSQLParser.COL, i);
        }

        public CreateTableContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_createTable;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).enterCreateTable(this);
					}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).exitCreateTable(this);
					}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
					if (visitor instanceof JFSQLVisitor) {
						return ((JFSQLVisitor<? extends T>) visitor).visitCreateTable(this);
					} else {
						return visitor.visitChildren(this);
					}
        }
    }

    public final CreateTableContext createTable() throws RecognitionException {
        CreateTableContext _localctx = new CreateTableContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_createTable);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(106);
                match(CREATE);
                setState(107);
                match(TABLE);
                setState(109);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == IF) {
                    {
                        setState(108);
                        ifNotExists();
                    }
                }

                setState(111);
                tableName();
                setState(112);
                match(OPEN_PAR);
                setState(113);
                columnDefinition();
                setState(118);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COL) {
                    {
                        {
                            setState(114);
                            match(COL);
                            setState(115);
                            columnDefinition();
                        }
                    }
                    setState(120);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(121);
                match(CLOSE_PAR);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DeleteContext extends ParserRuleContext {

        public TerminalNode DELETE() {
            return getToken(JFSQLParser.DELETE, 0);
        }

        public TerminalNode FROM() {
            return getToken(JFSQLParser.FROM, 0);
        }

        public TableNameContext tableName() {
            return getRuleContext(TableNameContext.class, 0);
        }

        public TerminalNode WHERE() {
            return getToken(JFSQLParser.WHERE, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public DeleteContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_delete;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).enterDelete(this);
					}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).exitDelete(this);
					}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
					if (visitor instanceof JFSQLVisitor) {
						return ((JFSQLVisitor<? extends T>) visitor).visitDelete(this);
					} else {
						return visitor.visitChildren(this);
					}
        }
    }

    public final DeleteContext delete() throws RecognitionException {
        DeleteContext _localctx = new DeleteContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_delete);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(123);
                match(DELETE);
                setState(124);
                match(FROM);
                setState(125);
                tableName();
                setState(128);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == WHERE) {
                    {
                        setState(126);
                        match(WHERE);
                        setState(127);
                        expr();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DropTableContext extends ParserRuleContext {

        public TerminalNode DROP() {
            return getToken(JFSQLParser.DROP, 0);
        }

        public TerminalNode TABLE() {
            return getToken(JFSQLParser.TABLE, 0);
        }

        public TableNameContext tableName() {
            return getRuleContext(TableNameContext.class, 0);
        }

        public IfExistsContext ifExists() {
            return getRuleContext(IfExistsContext.class, 0);
        }

        public DropTableContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dropTable;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).enterDropTable(this);
					}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
					if (listener instanceof JFSQLListener) {
						((JFSQLListener) listener).exitDropTable(this);
					}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
					if (visitor instanceof JFSQLVisitor) {
						return ((JFSQLVisitor<? extends T>) visitor).visitDropTable(this);
					} else {
						return visitor.visitChildren(this);
					}
        }
    }

    public final DropTableContext dropTable() throws RecognitionException {
        DropTableContext _localctx = new DropTableContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_dropTable);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(130);
                match(DROP);
                setState(131);
                match(TABLE);
                setState(133);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == IF) {
                    {
                        setState(132);
                        ifExists();
                    }
                }

                setState(135);
                tableName();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class InsertContext extends ParserRuleContext {

        public TerminalNode INSERT() {
            return getToken(JFSQLParser.INSERT, 0);
        }

        public TerminalNode INTO() {
            return getToken(JFSQLParser.INTO, 0);
        }

        public TableNameContext tableName() {
            return getRuleContext(TableNameContext.class, 0);
        }
